@@ -1,5 +1,6 @@
 * Set all fields readonly for inactive record
 * Enable check_access context when checking wizard access (issue9108)
+* Add option to send test email with trytond-admin
 * Add editable on calendar view
 * Add xalign and yalign to group
 * Add MultiSelection entry to Dict field
